Updated final report

--- a/presentacion.ipynb
+++ b/presentacion.ipynb
@@ -8,12 +8,13 @@
     }
    },
    "source": [
-    " # MMAyA - Sistemas de Información con miras al SATD y Nodos en cuencas estratégicas\n",
+    "**Nodos de Cuenca y SATD en las cuencas Azero y Guadalquivir - Tecnologías Base para su Implementación y Acoplo al Sistema de Información del MMAyA**\n",
+    " \n",
+    "Resultados de una Consultoría con GIZ-PROCUENCA\n",
     "\n",
-    "\n",
-    "Sergio Chumacero\n",
-    "\n",
-    "<div align=\"center\"><img src=\"./img/collage.png\" width=600></div>"
+    "*Sergio Chumacero Figueroa*\n",
+    " \n",
+    "<div align=\"center\"><img src=\"./img/collage.png\" width=500></div>"
    ]
   },
   {
@@ -24,15 +25,9 @@
     }
    },
    "source": [
-    "### Activa tu entorno de trabajo \"[mmayalab.ml](https://mayyalab.ml)\" y sincroniza sus aplicaciones con el siguiente link\n",
+    "Uno de los objetivos del programa PROCUENCA:\n",
     "\n",
-    "Link Corto: https://goo.gl/aZyCmC\n",
-    "\n",
-    "![](./img/mmaya_short.png)\n",
-    "\n",
-    "Usuarios: liz, neftali, gustavo, jimy, zenobia. \n",
-    "\n",
-    "La primera contraseña ingresada será asociada con la cuenta"
+    "\"Establecer procesos de gestión de la Información en torno a la temática hídrico-ambiental en las cuencas estratégicas que interviene (Azero y Guadalquivir)\""
    ]
   },
   {
@@ -43,46 +38,9 @@
     }
    },
    "source": [
-    "#### Sigue la presentación de manera interactiva\n",
-    "\n",
-    "1. Abre el archivo\n",
-    "```\n",
-    "presentacion.ipynb\n",
-    "```\n",
-    "2. Activa el modo presentación presionando \"Alt+r\" o haciendo click en el siguiente botón:\n",
-    "![](./img/follow_pres.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## Acceder al entorno de trabajo avanzado\n",
-    "\n",
-    "### En la url de la página principal, cambia 'tree' por 'lab':\n",
-    "\n",
-    "<div align=\"center\">\n",
-    "    <img src=\"./img/access_lab.jpg\"/>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Uno de los objetivos PROCUENCA: Establecer procesos de gestión de la Información en torno a la temática hídrico-ambiental. \n",
-    "\n",
-    "Objetivos Consultoría:\n",
+    "Objetivos de la consultoría:\n",
     "* Describir los sistemas de información hídrico-ambiental del MMAyA relacionados al SATD y Nodos de Cuenca.\n",
-    "* Proponer una estratégia para la implementación del SATD y Nodos de Cuenca en las Cuencas Estratégicas Azero y Guadalquivir, tomando en consideración tecnologías en el área de manejo de datos. "
+    "* Proponer una estratégia para la implementación de los Nodos de Cuenca y SATD a en las Cuencas Estratégicas Azero y Guadalquivir, desde el punto de vista de manejo de datos. "
    ]
   },
   {
@@ -93,10 +51,11 @@
     }
    },
    "source": [
-    "**Nodo de Cuenca**\n",
+    "**Qué entendemos por \"Nodo de Cuenca\"?**\n",
     "\n",
-    "* Punto de Acceso de los distintos actores de la cuenca al sistema de información del MMAyA.\n",
-    "* Incluye el subconjunto de datos del sistema concernientes a las funciones de los actores.   \n",
+    "Es el punto de Acceso de los distintos actores de la cuenca al sistema de información del MMAyA.\n",
+    "\n",
+    "Incluye el subconjunto de datos del sistema concernientes a las funciones de los actores de la cuenca.   \n",
     "\n",
     "<div align=\"center\"><img src=\"./img/nodos_cuenca.png\"/></div>"
    ]
@@ -109,9 +68,9 @@
     }
    },
    "source": [
-    "**SATD (Sistema de Apoyo a la Toma de Decisiones)**\n",
+    "**Qué entendemos por SATD (Sistema de Apoyo a la Toma de Decisiones)?**\n",
     "\n",
-    "Sistema capaz de hacer uso de los datos de cuenca y ofrecer herramientas automatizadas de análisis y predicción que sirvan de apoyo a tareas de gestión de cuenca.\n",
+    "Es un sistema capaz de hacer uso de los datos de cuenca y ofrecer herramientas automatizadas de análisis y predicción que sirvan de apoyo en tareas de gestión de cuenca.\n",
     "\n",
     "<div align=\"center\"><img src=\"./img/satd.png\"/></div>"
    ]
@@ -124,12 +83,13 @@
     }
    },
    "source": [
-    "**SIARH (Sistema de Información Ambiental y de Recursos Hídricos)**\n",
+    "**Acerca del SIARH**\n",
     "\n",
-    "* Extensión del SIRH - Resultado del proceso de centralización de sistemas\n",
-    "* En desarrollo - Infraestructura en obrajes\n",
+    "Actualmente en desarrollo, el SIARH apunta a ser el sistema central del MMAyA.\n",
     "\n",
-    "* Subsistemas relevantes al SATD y Nodos: VIBH, SIASBO, (SIMCA) y GeoSIRH"
+    "Los distintos sistemas del MMAyA pasarían a ser \"Módulos\" del SIARH. \n",
+    "\n",
+    "La infraestructura de los sistemas sería centralizada."
    ]
   },
   {
@@ -140,14 +100,13 @@
     }
    },
    "source": [
-    "## Trabajo Previo:\n",
+    "**Trabajo Previo [1]**\n",
     "\n",
-    "Análisis del Estado del Software y Hardware de Sistemas de Información del Sector de Medio Ambiente y Agua, para la Consolidación de un Sistema Integrado de Información. (21.09.2017 - BISIT S.R.L.)\n",
+    "*Análisis del Estado del Software y Hardware de Sistemas de Información del Sector de Medio Ambiente y Agua, para la Consolidación de un Sistema Integrado de Información. (21.09.2017 - BISIT S.R.L.)*\n",
     "    \n",
-    "* Se concentró en: infraestructura, normativas\n",
-    "* Recomendaciones:\n",
-    "    * Ciencia de Datos (Aprendizaje Automatizado)\n",
-    "    * Centralización de Infraestructura "
+    "Recomendaciones:\n",
+    "* Ciencia de Datos (Aprendizaje Automatizado)\n",
+    "* Centralización de Infraestructura (SIARH)"
    ]
   },
   {
@@ -158,10 +117,12 @@
     }
    },
    "source": [
-    "## Trabajo Previo:\n",
+    "**Trabajo Previo [2]**\n",
     "\n",
-    "* Implementación de la Página Web y Análisis e Ingeniería a Diseño Final del Sistema de Información Geográfico SISGE-KATARI de la Cuenca Katari y Lago Menor del Titicaca. (Southern STH S.R.L)\n",
-    "    * Punto de vista: Ingeniería de software"
+    "*Implementación de la Página Web y Análisis e Ingeniería a Diseño Final del Sistema de Información Geográfico SISGE-KATARI de la Cuenca Katari y Lago Menor del Titicaca. (Southern STH S.R.L)*\n",
+    "\n",
+    "\n",
+    "Plano del SISGE-KATARI con herramientas del campo de ingeniería de software. "
    ]
   },
   {
@@ -172,13 +133,35 @@
     }
    },
    "source": [
-    "## Trabajo Actual:\n",
+    "**Acerca de la Consultoría Actual**\n",
     "\n",
-    "* Análisis de los Sistemas de Información Sectorial para la Gestión Hídrico Ambiental y Propuestas para su Implementación y Operativización en Cuencas Estratégicas\n",
-    "    * Me concentré en: Manejo de datos y tecnologías relacionadas\n",
-    "    * Recomendaciones:\n",
-    "        * Sistemas de acceso programático de datos\n",
-    "        * Computo Cloud hacia Ciencia de Datos"
+    "*Análisis de los Sistemas de Información Sectorial para la Gestión Hídrico Ambiental y Propuestas para su Implementación y Operativización en Cuencas Estratégicas*\n",
+    "\n",
+    "Me concentré en las necesidades en el campo de manejo de datos para la implementación de Nodos de Cuenca y SATD.\n",
+    "\n",
+    "Recomendaciones:\n",
+    "* Sistemas de Intercambio de Datos Automatizados\n",
+    "* Computo Cloud hacia Ciencia de Datos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "**Datos del MMAyA Relacionados al SATD**\n",
+    "\n",
+    "**Demanda mínima**: \n",
+    "* Balance Hídrico Superficial (VIBH)\n",
+    "* Aguas Subterráneas (SIASBO)\n",
+    "* Proyectos (Riego, AP)\n",
+    "\n",
+    "**Datos externos:** Información meteorológica (SENAHMI)\n",
+    "\n",
+    "**También Relevante:** Cálidad de agua, Riego, Riesgos"
    ]
   },
   {
@@ -189,58 +172,16 @@
     }
    },
    "source": [
-    "## Demanda Mínima de Datos para la Operativización (Fase de Prueba)\n",
+    "**Tecnologías Clave para Propuestas**\n",
     "\n",
-    "* Balance Hídrico Superficial: [VIBH](http://vibh.mmaya.gob.bo)\n",
-    "* Aguas Subterráneas: SIASBO\n",
-    "* Proyectos (Riego, AP): SIRH\n",
-    "* Información meteorológica: SENAHMI\n",
+    "Nodos y SATD:\n",
     "\n",
-    "### + datos especializados a pedido"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## También Relevante:\n",
+    "1. Sistemas de Intercambio Automatizado de Datos\n",
+    "2. Opciones de Infraestructura: Computo Cloud\n",
     "\n",
-    "* Cálidad de agua: SIMCA\n",
-    "* Riego (Reuso & Sistemas de Riego): SIRH\n",
-    "* Riesgos: SENAHMI\n",
+    "SATD:\n",
     "\n",
-    "## Temas Transversales: \n",
-    "* Cálidad y Accesibilidad de Datos\n",
-    "* Entorno de Trabajo"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "Un Vistazo a los Datos Recopilados (Indices)\n",
-    "\n",
-    "![](./img/info.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Un Vistazo a los Datos Recopilados (Geo App)\n",
-    "![](./img/geo_app.png)"
+    "3. Entornos de Trabajo para Ciencia de Datos"
    ]
   },
   {
