--- a/presentacion.ipynb
+++ b/presentacion.ipynb
@@ -51,7 +51,7 @@
     }
    },
    "source": [
-    "**Qué entendemos por \"Nodo de Cuenca\"?**\n",
+    "**¿Qué entendemos por \"Nodo de Cuenca\"?**\n",
     "\n",
     "Es el punto de Acceso de los distintos actores de la cuenca al sistema de información del MMAyA.\n",
     "\n",
@@ -83,13 +83,16 @@
     }
    },
    "source": [
-    "**Acerca del SIARH**\n",
+    "**Datos del MMAyA Relacionados al SATD**\n",
     "\n",
-    "Actualmente en desarrollo, el SIARH apunta a ser el sistema central del MMAyA.\n",
+    "**Demanda mínima**: \n",
+    "* Balance Hídrico Superficial (VIBH)\n",
+    "* Aguas Subterráneas (SIASBO)\n",
+    "* Proyectos (Riego, AP)\n",
     "\n",
-    "Los distintos sistemas del MMAyA pasarían a ser \"Módulos\" del SIARH. \n",
+    "**Datos externos:** Información meteorológica (SENAHMI)\n",
     "\n",
-    "La infraestructura de los sistemas sería centralizada."
+    "**También Relevante:** Cálidad de Agua, Riego, Riesgos"
    ]
   },
   {
@@ -133,15 +136,13 @@
     }
    },
    "source": [
-    "**Acerca de la Consultoría Actual**\n",
+    "**Acerca del SIARH**\n",
     "\n",
-    "*Análisis de los Sistemas de Información Sectorial para la Gestión Hídrico Ambiental y Propuestas para su Implementación y Operativización en Cuencas Estratégicas*\n",
+    "* Actualmente en desarrollo, el SIARH apunta a ser el sistema central del MMAyA.\n",
     "\n",
-    "Me concentré en las necesidades en el campo de manejo de datos para la implementación de Nodos de Cuenca y SATD.\n",
+    "* Los distintos sistemas del MMAyA pasarían a ser \"Módulos\" del SIARH. \n",
     "\n",
-    "Recomendaciones:\n",
-    "* Sistemas de Intercambio de Datos Automatizados\n",
-    "* Computo Cloud hacia Ciencia de Datos"
+    "* Centralización de Infraestructura."
    ]
   },
   {
@@ -152,16 +153,30 @@
     }
    },
    "source": [
-    "**Datos del MMAyA Relacionados al SATD**\n",
+    "**Dificultades actuales para el Desarrollo de Nodos y SATD**\n",
     "\n",
-    "**Demanda mínima**: \n",
-    "* Balance Hídrico Superficial (VIBH)\n",
-    "* Aguas Subterráneas (SIASBO)\n",
-    "* Proyectos (Riego, AP)\n",
+    "* Acceso a los datos de los módulos. \n",
     "\n",
-    "**Datos externos:** Información meteorológica (SENAHMI)\n",
+    "* Limitaciones de herramientas e infraestructura.\n",
     "\n",
-    "**También Relevante:** Cálidad de agua, Riego, Riesgos"
+    "* Dependencias entre equpios de desarrollo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "**Acerca de la Consultoría Actual**\n",
+    "\n",
+    "Me concentré en las necesidades en el campo de manejo de datos para la implementación de Nodos de Cuenca y SATD.\n",
+    "\n",
+    "Recomendaciones:\n",
+    "* Sistemas de Intercambio de Datos Automatizados (Nodos y SATD)\n",
+    "* Entornos de Trabajo para Ciencia de Datos (SATD)"
    ]
   },
   {
@@ -172,29 +187,18 @@
     }
    },
    "source": [
-    "**Tecnologías Clave para Propuestas**\n",
-    "\n",
-    "Nodos y SATD:\n",
-    "\n",
-    "1. Sistemas de Intercambio Automatizado de Datos\n",
-    "2. Opciones de Infraestructura: Computo Cloud\n",
-    "\n",
-    "SATD:\n",
-    "\n",
-    "3. Entornos de Trabajo para Ciencia de Datos"
+    "## Propuesta de Implementación Nodos y SATD: Conceptos Básicos "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
-    "## Accesibilidad de Datos: Sistemas de Intercambio Automatizado de Datos (Datos como Servicio)\n",
-    "\n",
-    "Modelo Básico\n",
+    "Modelo Básico de Sistemas de Intercambio Automatizado de Datos (Conexión Simple)\n",
     "\n",
     "<div align=\"center\"><img src=\"./img/api_basic_full.jpg\"/></div>"
    ]
@@ -207,9 +211,7 @@
     }
    },
    "source": [
-    "## Accesibilidad de Datos: Sistemas de Intercambio Automatizado de Datos (Datos como Servicio)\n",
-    "\n",
-    "Simple idea, grandes consecuencias\n",
+    "Extensión a un sistema completo\n",
     "\n",
     "<div align=\"center\"><img src=\"./img/dream.png\"/></div>"
    ]
@@ -222,53 +224,9 @@
     }
    },
    "source": [
-    "## Accesibilidad de Datos: Sistemas de Intercambio Automatizado de Datos (Datos como Servicio)\n",
+    "**Ventajas:**\n",
     "\n",
-    "Solución Mínima MMAyA\n",
-    "\n",
-    "<div align=\"center\"><img src=\"./img/mmaya_api.png\"></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## Accesibilidad de Datos: Sistemas de Intercambio Automatizado de Datos (Datos como Servicio)\n",
-    "\n",
-    "Solución Extendida MMAyA\n",
-    "\n",
-    "<div align=\"center\"><img src=\"./img/mmaya_api2.png\"></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## Accesibilidad de Datos: Sistemas de Intercambio Automatizado de Datos (Datos como Servicio)\n",
-    "\n",
-    "Propuesta de Estratégia: (Extensión API para solución básica)\n",
-    "\n",
-    "<div align=\"center\"><img src=\"./img/extension_api.png\"></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Ventajas:\n",
-    "* Interoperabilidad automatizada entre sistemas tanto existentes como emergentes\n",
+    "* Interoperabilidad entre Sistemas\n",
     "* Aislamiento de Tecnologías (Reducción del grado de Coodependencia)\n",
     "* Reuso de Datos\n",
     "* Consistencia de Datos"
@@ -282,12 +240,41 @@
     }
    },
    "source": [
-    "Desafíos y Propuestas de Solución:\n",
+    "**Desafíos:**\n",
+    "\n",
     "* Complejidad de acceso -> Protocolos API (OpenAPI)\n",
     "* Abuso de Consumo -> Sistemas de Autorización y Control de Acceso\n",
     "* Compatibilidad con sistemas existentes -> Puntos de Ingreso\n",
-    "* Demanda del Servicio Variable -> Extención/Reducción de Capacidad Dinámica\n",
+    "* Demanda del Servicio Variable -> Extención/Reducción dinámica de Capacidad\n",
     "* Consistencia del Servicio <-> Consistencia de la Infraestructura"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Propuesta para Nodos de Cuenca\n",
+    "\n",
+    "\n",
+    "<div align=\"center\"><img src=\"./img/propuesta_nodos.png\"></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Extensión Natural a SATD\n",
+    "\n",
+    "\n",
+    "<div align=\"center\"><img src=\"./img/mmaya_api2.png\"></div>"
    ]
   },
   {
@@ -313,127 +300,11 @@
     }
    },
    "source": [
-    "### Opciones de Infraestructura: Computo Cloud\n",
+    "## Propuesta: Entornos de Trabajo para Ciencia de Datos (SATD)\n",
     "\n",
-    "Centralización de Infraestructura, llevada al extremo.\n",
-    "\n",
-    "* Google (GCP)\n",
-    "* Amazon (AWS)\n",
-    "* Microsoft (Azure)\n",
-    "* IBM (Watson)\n",
-    "* Digital Ocean\n",
-    "* ..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "#### Manejo de Servidores Físicos\n",
-    "\n",
-    "Premisa, Energía, Internet, Seguridad Física, Enfriamiento, Ventilación, Hardware\n",
-    "\n",
-    "Sistema Operativo, Lenguajes de Programación, Paquetes, Dependencias, Bases de Datos, Puertos IP, Routers, Load Balancers, Firewall, Encriptado accesos \n",
-    "\n",
-    "* Puesta en Funcionamiento: Transporte, Instalación\n",
-    "* Servicios 24/7: Cortes\n",
-    "* Incompatibilidades y Dependencias\n",
-    "* Mantenimiento: Actualizaciones, Monitoreo, Errores"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Sin mencionar mejoras en Hardware, Gestión, Planificación, Administración ...\n",
-    "\n",
-    "Todos estos aspectos tienen un costo, tanto inicial cómo regular a largo plazo.\n",
-    "\n",
-    "El costo por uso se incrementa mientras más pequeña sea la premisa -> Centralización de Hardware"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "#### Manejo de Servicios Cloud\n",
-    "\n",
-    "Especificas:\n",
-    "* Requerimientos de Máquina (Tipo, RAM, Memoria)\n",
-    "* Imágen de Disco (Sistema Operativo + Características de Sistema)\n",
-    "* Entorno de aplicación (Contenedor)\n",
-    "\n",
-    "Y en unos minutos, estas listo para producción.\n",
-    "\n",
-    "Interacción por medio de APIs."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "#### Recomendación: Sistema Mixto y Migración Paulatina\n",
-    "\n",
-    "* Mantener los sistemas en premisa y continuar con el proceso de optimización.\n",
-    "* Implementar sistemas de intercambio automatizado de datos haciendo uso de tecnologías cloud.\n",
-    "* Implementar aplicaciones y entornos de trabajo que hagan uso de los nuevos sistemas. \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Entornos de Trabajo Cloud\n",
-    "\n",
-    "Paradigma Aplicación Web vs. Entorno Cloud:\n",
+    "Paradigma Aplicación Web vs. Entorno de Trabajo web:\n",
     "* Aplicación Web: Gran cantidad de usuarios, poco poder computacional. (Estático/Semi-estático)\n",
-    "* Entorno de Trabajo Cloud: Pocos usuarios (técnicos), gran poder computacional. (Dinámico)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## Entornos de Trabajo Cloud\n",
-    "\n",
-    "Idea: Ofrecer un entorno de trabajo flexible y poderoso a los técnicos, desde el cual tengan acceso a los datos que necesitan y puedan trabajar con código (+ librerías) o herramientas gráficas generadas a pedido y en corto tiempo (o generar sus propias)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "¿Cómo funciona?\n",
-    "\n",
-    "<div align=\"center\"><img src=\"./img/entorno_cloud.png\"/></div>"
+    "* Entorno de Trabajo web: Pocos usuarios (técnicos), gran poder computacional. (Dinámico)"
    ]
   }
  ],
