final version of presentation

--- a/presentacion.ipynb
+++ b/presentacion.ipynb
@@ -246,7 +246,22 @@
     "* Abuso de Consumo -> Sistemas de Autorización y Control de Acceso\n",
     "* Compatibilidad con sistemas existentes -> Puntos de Ingreso\n",
     "* Demanda del Servicio Variable -> Extención/Reducción dinámica de Capacidad\n",
-    "* Consistencia del Servicio <-> Consistencia de la Infraestructura"
+    "* Consistencia: Servicio <-> Infraestructura"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Otros aspectos relacionados:\n",
+    "* Requerimientos de Infraestructura: Relación API <-> Computo Cloud\n",
+    "* API y Servicios de Computo\n",
+    "* Tipos de API (REST, GraphQL)\n",
+    "* Tipo de Datos (estructurados/no-estructurados, archivos grandes)"
    ]
   },
   {
@@ -274,22 +289,7 @@
     "## Extensión Natural a SATD\n",
     "\n",
     "\n",
-    "<div align=\"center\"><img src=\"./img/mmaya_api2.png\"></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Otros aspectos relacionados:\n",
-    "* Requerimientos de Infraestructura: Relación API <-> Computo Cloud\n",
-    "* API y Servicios de Computo\n",
-    "* Tipos de API (REST, GraphQL)\n",
-    "* Tipo de Datos (estructurados/no-estructurados, archivos grandes)"
+    "<div align=\"center\"><img src=\"./img/propuesta_satd.png\"></div>"
    ]
   },
   {
